--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=My Blog New
 
 #Quête 2 : Spécification des paramètres de connexion à la base de données MySQL
 
-spring.datasource.url=jdbc:mysql://localhost:3306/db_my_blow_new?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/db_myblog_new?createDatabaseIfNotExist=true
 spring.datasource.username=ben
 spring.datasource.password=blackmetal
 
